force-app/main/default/objects/TaskList__c/TaskList__c.object-meta.xml
<CustomObject>
    <label>TaskList</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>