force-app/main/default/objects/TaskList__c/fields/Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Assigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TaskLists (Assigned By)</relationshipLabel>
    <relationshipName>TaskLists1</relationshipName>
    <type>Lookup</type>
</CustomField>