force-app/main/default/objects/TaskList__c/fields/billable_hours__c.field-meta.xml
<CustomField>
    <fullName>billable_hours__c</fullName>
    <description>User Billable hours.</description>
    <label>billable hours</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>