force-app/main/default/objects/TaskList__c/fields/Task_AssignTime__c.field-meta.xml
<CustomField>
    <fullName>Task_AssignTime__c</fullName>
    <description>Time and date when task will assign.</description>
    <label>Task AssignTime</label>
    <type>DateTime</type>
</CustomField>