force-app/main/default/objects/TaskList__c/fields/Task_Description__c.field-meta.xml
<CustomField>
    <fullName>Task_Description__c</fullName>
    <description>Here user will put task description that will required.</description>
    <label>Task Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>