force-app/main/default/objects/TaskList__c/validationRules/Availability.validationRule-meta.xml
<ValidationRule>
    <fullName>Availability</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Availability__c &gt;= 1 , Availability__c &lt;= 100)</errorConditionFormula>
    <errorDisplayField>Availability__c</errorDisplayField>
    <errorMessage>Availability percent cannot exceed 100%</errorMessage>
</ValidationRule>