force-app/main/default/objects/TaskList__c/validationRules/Task_Assign_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Task_Assign_Time</fullName>
    <active>true</active>
    <errorConditionFormula>AND(DATEVALUE(Task_AssignTime__c) &lt; TODAY() , TIMEVALUE(Task_AssignTime__c) &lt;  TIMENOW() )</errorConditionFormula>
    <errorDisplayField>Task_AssignTime__c</errorDisplayField>
    <errorMessage>You Can Not enter past Date And Time.</errorMessage>
</ValidationRule>