force-app/main/default/objects/TaskList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>User_Name__c</columns>
    <columns>Project_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>